crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_attr_string.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div class=\"x>"
---
Markup(
    Attr(
        String(
            Endless,
            1,
            15,
        ),
        1,
        6,
    ),
    1,
    1,
)
