crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_attr_value.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div class=>"
---
Markup(
    Attr(
        Value(
            1,
            12,
        ),
        1,
        6,
    ),
    1,
    1,
)
