crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_close_end.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div></div x>"
---
Markup(
    CloseEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 6,
            },
            boundary: Position {
                line: 1,
                column: 11,
            },
            unexpected: Position {
                line: 1,
                column: 12,
            },
        },
    ),
    1,
    1,
)
