crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_close_mismatch.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div></span>"
---
Markup(
    CloseMismatch {
        expected: "div",
        found: "span",
        row: 1,
        col: 8,
    },
    1,
    1,
)
