crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_close_mismatch_case.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div></Div>"
---
Markup(
    CloseMismatch {
        expected: "div",
        found: "Div",
        row: 1,
        col: 8,
    },
    1,
    1,
)
