crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_close_mismatch_component_path.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<Ui::Button></Ui::Btn>"
---
Markup(
    CloseMismatch {
        expected: "Ui::Button",
        found: "Ui::Btn",
        row: 1,
        col: 15,
    },
    1,
    1,
)
