crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_close_mismatch_nested.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div><p>x</div>"
---
Markup(
    Child(
        Element(
            CloseMismatch {
                expected: "p",
                found: "div",
                row: 1,
                col: 12,
            },
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
