crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_fragment_closed_by_name.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<>hi</div>"
---
Markup(
    CloseMismatch {
        expected: "",
        found: "div",
        row: 1,
        col: 7,
    },
    1,
    1,
)
