crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_fragment_unclosed.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<>hi"
---
Markup(
    FragmentUnclosed(
        1,
        1,
    ),
    1,
    1,
)
