crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_hole_bad_expr.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{else}</p>"
---
Markup(
    Child(
        Hole(
            Reserved(
                Else,
                1,
                5,
            ),
            1,
            5,
        ),
        1,
        4,
    ),
    1,
    1,
)
